hospital update bug fixed

--- a/resources/lang/bn.json
+++ b/resources/lang/bn.json
@@ -16,6 +16,7 @@
     "hospitals": "হাসপাতাল",
     "take_appointment": "অ্যাপয়েন্টমেন্ট নিন",
     "about_us": "আমাদের সম্পর্কে",
+    "blogs": "ব্লগ",
 
     "address_title": "ঠিকানা",
     "address_desc": "৫০৩ ওল্ড বাফেলো স্ট্রিট, নর্থওয়েস্ট #২০৫, নিউ ইয়র্ক-৩০৮৭",
@@ -81,5 +82,11 @@
     "Select Speciality": "বিশেষত্ব নির্বাচন করুন",
     "Your Issue": "আপনার সমস্যা",
     "Book": "বুক করুন",
-    "Optional": "বাধ্যতামূলক নয় এমন"
+    "Optional": "বাধ্যতামূলক নয় এমন",
+
+
+
+    "Search": "খুজুন",
+    "All City": "সব শহর",
+    "All Speciality": "সব ডিপার্টমেন্ট"
 }
